# Wild-Time-Data

./: README.rst  pyproject.toml  requirements.txt
converter/: README.rst  fmow.py  requirements.txt
wild_time_data/: __init__.py  core.py  datasets.py  utils.py
