[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wild_time_data"
description = "WILDS distribution shift data"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools]
packages = ["wild_time_data"]

[tool.setuptools.dynamic]
version = {attr = "wild_time_data.__version__"}
readme = {file = ["README.rst"]}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
